turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:-14: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
				setBrushColor(colors( rule(state)(currentColor)(NEXT_COLOR) ));
                                                          ^Turmite:-10: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
				rule(state)(currentColor)(NEXT_MOVE) match {
                                    ^Turmite:-4: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
				case _      => getGame().getLogger().log("Unknown turn command associated to i="+currentColor+": "+rule(state)(currentColor)(NEXT_MOVE));
                                                                                                                                       ^Turmite: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
				state = rule(state)(currentColor)(NEXT_STATE);
                                            ^Turmite:26: error: type mismatch;
 found   : Array[Array[Array[Int]]]
 required: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int)))
    rule = new Array[Array[Array[Int]]](1); /* one state only */
           ^Turmite:27: error: value update is not a member of (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int)))
    rule(0) = new Array[Array[Int]](nbColors); /* As many colors as letters in the ant's name */
    ^Turmite:29: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
        rule(0)(i) = new Array[Int](3); /* every command set has 3 elements */ 
            ^Turmite:31: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
        rule(0)(i)(NEXT_COLOR) = (i+1) % nbColors;
            ^Turmite:34: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
            rule(0)(i)(NEXT_MOVE) = LEFT;            
                ^Turmite:36: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
            rule(0)(i)(NEXT_MOVE) = RIGHT;
                ^Turmite:41: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
        rule(0)(i)(NEXT_STATE) = 0; /* only one state */
            ^Turmite:78: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
		var colors = new Array[Color] (rule(0).length);
                                                   ^Turmite:79: error: (((Int, Int, Int), (Int, Int, Int)), ((Int, Int, Int), (Int, Int, Int))) does not take parameters
		for (i <- 0 to rule(0).length-1) {
                                   ^